--- a/Bootstrap/App_Themes/Bootstrap/Global/sfnormalize.css
+++ b/Bootstrap/App_Themes/Bootstrap/Global/sfnormalize.css
@@ -1484,7 +1484,7 @@ table .span24 {
   *margin-right: .3em;
   line-height: 14px;
   vertical-align: text-top;
-  background-image: url("../Images/glyphicons-halflings.png");
+  background-image: url("Images/glyphicons-halflings.png");
   background-position: 14px 14px;
   background-repeat: no-repeat;
 }
@@ -1493,7 +1493,7 @@ table .span24 {
   *margin-left: 0;
 }
 .icon-white {
-  background-image: url("../Images/glyphicons-halflings-white.png");
+  background-image: url("Images/glyphicons-halflings-white.png");
 }
 .icon-glass {
   background-position: 0      0;
