--- a/Bootstrap/App_Themes/Bootstrap/Global/sfnormalize.yui.less
+++ b/Bootstrap/App_Themes/Bootstrap/Global/sfnormalize.yui.less
@@ -4,7 +4,7 @@
  * ============================================================================ 
  */
 
-@import "reset.less";
+@import "_bootstrap/reset.less";
 
 /*#region variables */
 /* ============================================================================ */
@@ -185,37 +185,37 @@
 
 /*#region static bootstrap */
 /* ============================================================================ */
-@import "mixins.less";
-@import "scaffolding.less";
-@import "grid.less";
-@import "layouts.less";
-@import "type.less";
-@import "code.less";
-@import "forms.less";
-@import "tables.less";
-@import "sprites.less";
-@import "dropdowns.less";
-@import "wells.less";
-@import "component-animations.less";
-@import "close.less";
-@import "buttons.less";
-@import "button-groups.less";
-@import "alerts.less"; 
-@import "navs.less";
-@import "navbar.less";
-@import "breadcrumbs.less";
-@import "pagination.less";
-@import "pager.less";
-@import "modals.less";
-@import "tooltip.less";
-@import "popovers.less";
-@import "thumbnails.less";
-@import "labels-badges.less";
-@import "progress-bars.less";
-@import "accordion.less";
-@import "carousel.less";
-@import "hero-unit.less";
-@import "utilities.less"; // Has to be last to override when necessary
+@import "_bootstrap/mixins.less";
+@import "_bootstrap/scaffolding.less";
+@import "_bootstrap/grid.less";
+@import "_bootstrap/layouts.less";
+@import "_bootstrap/type.less";
+@import "_bootstrap/code.less";
+@import "_bootstrap/forms.less";
+@import "_bootstrap/tables.less";
+@import "_bootstrap/sprites.less";
+@import "_bootstrap/dropdowns.less";
+@import "_bootstrap/wells.less";
+@import "_bootstrap/component-animations.less";
+@import "_bootstrap/close.less";
+@import "_bootstrap/buttons.less";
+@import "_bootstrap/button-groups.less";
+@import "_bootstrap/alerts.less"; 
+@import "_bootstrap/navs.less";
+@import "_bootstrap/navbar.less";
+@import "_bootstrap/breadcrumbs.less";
+@import "_bootstrap/pagination.less";
+@import "_bootstrap/pager.less";
+@import "_bootstrap/modals.less";
+@import "_bootstrap/tooltip.less";
+@import "_bootstrap/popovers.less";
+@import "_bootstrap/thumbnails.less";
+@import "_bootstrap/labels-badges.less";
+@import "_bootstrap/progress-bars.less";
+@import "_bootstrap/accordion.less";
+@import "_bootstrap/carousel.less";
+@import "_bootstrap/hero-unit.less";
+@import "_bootstrap/utilities.less"; // Has to be last to override when necessary
 .sfspan (@columns) {width: (@gridColumnWidth * @columns) + (@gridGutterWidth * (@columns - 1));}
 .sf_cols{.row;}
 /* ============================================================================ */
@@ -225,11 +225,11 @@
 /*#region responsive bootstrap */
 /* ============================================================================ */
 // Utility classes
-@import "responsive-utilities.less";
-@import "responsive-767px-max.less";
-@import "responsive-768px-979px.less";
-@import "responsive-1200px-min.less";
-@import "responsive-navbar.less";
+@import "_bootstrap/responsive-utilities.less";
+@import "_bootstrap/responsive-767px-max.less";
+@import "_bootstrap/responsive-768px-979px.less";
+@import "_bootstrap/responsive-1200px-min.less";
+@import "_bootstrap/responsive-navbar.less";
 .sfspan (@columns) {
 width: (@fluidGridColumnWidth * @columns) + (@fluidGridGutterWidth * (@columns - 1));
 *width: (@fluidGridColumnWidth * @columns) + (@fluidGridGutterWidth * (@columns - 1)) - (.5 / @gridRowWidth * 100 * 1%); }
