--- a/Boilerplate/App_Themes/Boilerplate/Global/sfproject.yui.less
+++ b/Boilerplate/App_Themes/Boilerplate/Global/sfproject.yui.less
@@ -1,51 +1,81 @@
 ﻿/*!
  * ============================================================================ 
- * SF|Boilerplated based on H5BP v3.0.2 | sfproject.yui.less
+ * SF|Boilerplated based on H5BP v4.0.2 | sfproject.yui.less
  * ============================================================================ 
  */
 
-/*#region LESS variables */
-/* ============================================================================ */
-   @wrapper_font-size: 12px;
-   @wrapper_line-height:18px;
-   @wrapper_font-family: Arial,Verdana,Sans-serif;
-   @wrapper_color-text:#222222;
-   @wrapper_color-link:#105CB6;
-/*#endregion */
+/* #region less variables and mixins */
+/*  -----------------------------------------------------------------------*/
+@wrapper_font-size: 12px;
+@wrapper_line-height: 18px;
+@wrapper_font-family: Arial,Verdana,Sans-serif;
+@wrapper_color-text: #222222;
+@wrapper_color-link: #105CB6;
+/*  ------------------------------------------------------------------------*/
+/* #endregion */
+/*  ------------------------------------------------------------------------*/
+/* #region Vertical rhythm */
+/*  ------------------------------------------------------------------------*/
+.sfPublicWrapper { color: @wrapper_color-text; font-family: @wrapper_font-family; font-size: @wrapper_font-size; h1h1line-height: @wrapper_line-height;
+
+    h1 { font-size: 2.5 * @wrapper_font-size; font-weight: normal; line-height: 2 * @wrapper_line-height; margin-bottom: round(0.34 * @wrapper_line-height); margin-top: round(0.67 * @wrapper_line-height); }
+    h2 { font-size: 2.0 * @wrapper_font-size; font-weight: normal; line-height: 2 * @wrapper_line-height; margin-bottom: round(0.34 * @wrapper_line-height); margin-top: round(0.67 * @wrapper_line-height); }
+    h3 { font-size: 1.5 * @wrapper_font-size; font-weight: normal; line-height: 2 * @wrapper_line-height; margin-bottom: round(0.34 * @wrapper_line-height); margin-top: round(0.67 * @wrapper_line-height); }
+    h4 { font-size: 1.25 * @wrapper_font-size; font-weight: normal; line-height: 2 * @wrapper_line-height; margin-top: @wrapper_line-height; }
+    h5 { font-size: 1 * @wrapper_font-size; font-weight: normal; line-height: 2 * @wrapper_line-height; margin-top: @wrapper_line-height; }
+    h6 { font-size: 1 * @wrapper_font-size; font-weight: normal; line-height: 1 * @wrapper_line-height; margin-top: @wrapper_line-height; }
+    p, ul, blockquote { margin-bottom: @wrapper_line-height; }
+}
+/*  ------------------------------------------------------------------------*/
+/* #endregion */
+/*  ------------------------------------------------------------------------*/
+/* #region Project stylesheet */
+/*  ------------------------------------------------------------------------*/
+html, body, form { display: block; float: left; margin: 0 auto; padding: 0; width: 100%; }
+#PublicWrapper { display: block; margin: 0 auto; min-width: 960px; position: relative; }
+
+/*  ------------------------------------------------------------------------*/
+/* #endregion */
+/*  ------------------------------------------------------------------------*/
+/* #region Non semantic helper class */
+/*  ------------------------------------------------------------------------*/
+.left { float: left; } .right { float: right; } .hidden { display: none !important; visibility: hidden; } .visible { visibility: visible; } .invisible { visibility: hidden; }
+.ir { background-color: transparent; background-repeat: no-repeat; border: 0; direction: ltr; display: block; overflow: hidden; text-align: left; text-indent: -999em; } .ir br { display: none; }
+.visuallyhidden { border: 0; clip: rect(0 0 0 0); height: 1px; margin: -1px; overflow: hidden; padding: 0; position: absolute; width: 1px; } .visuallyhidden.focusable:active, .visuallyhidden.focusable:focus { clip: auto; height: auto; margin: 0; overflow: visible; position: static; width: auto; }
+/*  ------------------------------------------------------------------------*/
+/* #endregion */
+/*  ------------------------------------------------------------------------*/
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 /*#region LESS mixins */
 /* ============================================================================ */
-.border-radius (@radius) {
-  border-radius: @radius;
-  -moz-border-radius: @radius;
-  -webkit-border-radius: @radius;
-}
+.border-radius (@radius) { -moz-border-radius: @radius; -webkit-border-radius: @radius; border-radius: @radius; }
 /*#endregion */
 
-/*#region Vertical Rhythm */
-/* ============================================================================ */
-.sfPublicWrapper {color:@wrapper_color-text; font-family: @wrapper_font-family;  font-size : @wrapper_font-size; line-height: @wrapper_line-height;
- 
- h1 {font-size: 2.5 * @wrapper_font-size; line-height: 2* @wrapper_line-height; margin-top: round(0.67* @wrapper_line-height); margin-bottom: round(0.34* @wrapper_line-height); font-weight:normal;}
- h2 {font-size: 2.0 * @wrapper_font-size; line-height: 2* @wrapper_line-height; margin-top: round(0.67* @wrapper_line-height); margin-bottom: round(0.34* @wrapper_line-height); font-weight:normal;}
- h3 {font-size: 1.5 * @wrapper_font-size; line-height: 2* @wrapper_line-height; margin-top: round(0.67* @wrapper_line-height); margin-bottom: round(0.34* @wrapper_line-height); font-weight:normal;}
- h4 {font-size: 1.25 * @wrapper_font-size; line-height: 2* @wrapper_line-height; margin-top: @wrapper_line-height; font-weight:normal;}
- h5 {font-size: 1 * @wrapper_font-size; line-height: 2* @wrapper_line-height; margin-top: @wrapper_line-height; font-weight:normal;}
- h6 {font-size: 1 * @wrapper_font-size; line-height : 1* @wrapper_line-height; margin-top: @wrapper_line-height; font-weight:normal;}
- p, ul, blockquote {margin-bottom: @wrapper_line-height;}
-}
-/*#endregion */
-
-/*#region Project stylesheet */
-/* ============================================================================ */
-.PublicWrapper{width:100%;float:left;}
-
-/*#endregion */
-
-/*#region Non semantic helper class */
-/* ============================================================================ */
-.left{float:left;} .right{float:right;} .hidden {display: none !important; visibility: hidden;} .visible {visibility: visible;} .invisible {visibility: hidden;}
-.ir {display: block; border: 0; text-indent: -999em; overflow: hidden; background-color: transparent; background-repeat: no-repeat; text-align: left; direction: ltr;} .ir br {display: none;} 
-.visuallyhidden {border: 0; clip: rect(0 0 0 0); height: 1px; margin: -1px; overflow: hidden; padding: 0; position: absolute; width: 1px;} .visuallyhidden.focusable:active, .visuallyhidden.focusable:focus {clip: auto; height: auto; margin: 0; overflow: visible; position: static; width: auto;} 
-/*#endregion */
-/* ============================================================================ */
