--- a/Boilerplate/App_Master/Boilerplate.master
+++ b/Boilerplate/App_Master/Boilerplate.master
@@ -13,18 +13,18 @@
 <html class="no-js">
 <!--<![endif]-->
 <head id="Head" runat="server">
-    <meta http-equiv="content-type" content="text/html; charset=utf-8" />
+    <meta http-equiv="content-type" content="text/html; charset=utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
     <meta http-equiv="cleartype" content="on">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <meta name="application-name" content="Website applicationname shown above taskbar preview">
     <meta name="msapplication-tooltip" content="Additional tooltip text">
-    <meta name="msapplication-window" content="width=1024;height=768" />
+    <meta name="msapplication-window" content="width=1024;height=768">
     <meta name="msapplication-starturl" content="./">
-    <meta name="msapplication-navbutton-color" content="#E72C53" />
-    <meta name="msapplication-TileColor" content="#E72C53" />
-    <meta name="msapplication-TileImage" content="/Sitefinity/WebsiteTemplates/Boilerplate/App_Themes/Boilerplate/Icons/apple-touch-icon-144-precomposed.pn" />
+    <meta name="msapplication-navbutton-color" content="#E72C53">
+    <meta name="msapplication-TileColor" content="#E72C53">
+    <meta name="msapplication-TileImage" content="/Sitefinity/WebsiteTemplates/Boilerplate/App_Themes/Boilerplate/Icons/apple-touch-icon-144-precomposed.png">
     <link rel="apple-touch-icon-precomposed" sizes="144x144" href="/Sitefinity/WebsiteTemplates/Boilerplate/App_Themes/Boilerplate/Icons/apple-touch-icon-144-precomposed.png">
     <link rel="apple-touch-icon-precomposed" sizes="114x114" href="/Sitefinity/WebsiteTemplates/Boilerplate/App_Themes/Boilerplate/Icons/apple-touch-icon-114-precomposed.png">
     <link rel="apple-touch-icon-precomposed" sizes="72x72" href="/Sitefinity/WebsiteTemplates/Boilerplate/App_Themes/Boilerplate/Icons/apple-touch-icon-72-precomposed.png">
@@ -53,7 +53,7 @@
 <body class="standard">
     <!--[if lt IE 7]><p class=chromeframe>Your browser is <em>not</em> supported. <a href="http://browsehappy.com/">Upgrade to a different browser</a> to experience this site.</p><![endif]-->
     <form id="form1" runat="server">
-        <asp:ScriptManager runat="server"></asp:ScriptManager>
+        <asp:ScriptManager runat="server" EnableScriptGlobalization="true" EnableScriptLocalization="false"></asp:ScriptManager>
         <a accesskey="s" href="#cpw_main" id="sfSkip" class="visuallyhidden">
             <asp:Literal ID="skipToMainContentLiteral" runat="server" Text='<%$Resources:PageResources, SkipToTheMainContent %>' /></a>
         <!--  ============================================================================== -->
@@ -64,10 +64,10 @@
                 <!--  ====================================================================== -->
                 <div id="cpw_headerwrapper" class="sf_colsOut sf_1col_1_100">
                     <!--  ================================================================== -->
-                    <header ID="cpw_header" class="sf_colsIn sf_1col_1in_100">
+                    <header id="cpw_header" class="sf_colsIn sf_1col_1in_100">
                         <asp:ContentPlaceHolder ID="cph_header" runat="server" />
                     </header>
-                    <nav ID="cpw_navigation" class="sf_colsIn sf_1col_1in_100" role="navigation">
+                    <nav id="cpw_navigation" class="sf_colsIn sf_1col_1in_100" role="navigation">
                         <asp:ContentPlaceHolder ID="cph_navigation" runat="server" />
                     </nav>
                     <!--  ================================================================== -->
@@ -79,7 +79,7 @@
                 <!--  ====================================================================== -->
                 <div id="cpw_mainwrapper" class="sf_colsOut sf_1col_1_100">
                     <!--  ================================================================== -->
-                    <article ID="cpw_main" class="sf_colsIn sf_1col_1in_100" role="main">
+                    <article id="cpw_main" class="sf_colsIn sf_1col_1in_100" role="main">
                         <asp:ContentPlaceHolder ID="cph_main" runat="server" />
                     </article>
                     <!--  ================================================================== -->
@@ -92,7 +92,7 @@
                 <!--  ====================================================================== -->
                 <div id="cpw_footerwrapper" class="sf_colsOut sf_1col_1_100">
                     <!--  ================================================================== -->
-                    <footer ID="cpw_footer" class="sf_colsIn sf_1col_1in_100" role="contentinfo">
+                    <footer id="cpw_footer" class="sf_colsIn sf_1col_1in_100" role="contentinfo">
                         <asp:ContentPlaceHolder ID="cph_footer" runat="server" />
                     </footer>
                     <!--  ================================================================== -->
